--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -5,8 +5,43 @@
     <title>메인 화면</title>
 </head>
 <body>
-   <h1> 게시물 목록이 출력될 예정입니다. </h1>
    <a th:href="@{/post}">글쓰기</a>
+
+   <table>
+       <thead>
+       <tr>
+           <th>번호</th>
+           <th>이름</th>
+           <th>나이</th>
+           <th>학과</th>
+           <th>작성일</th>
+       </tr>
+       </thead>
+
+
+       <tbody>
+       <!-- CONTENTS !-->
+       <tr th:each="board : ${boardList}">
+           <td>
+               <span th:text="${board.id}"></span>
+           </td>
+           <td>
+               <a th:href="@{'/post/' + ${board.id}}">
+                   <span th:text="${board.name}"></span>
+               </a>
+           </td>
+           <td>
+               <span th:text="${board.age}"></span>
+           </td>
+           <td>
+               <span th:text="${board.major}"></span>
+           </td>
+           <td>
+               <span th:text="${#temporals.format(board.createdTime, 'yyyy-MM-dd HH:mm')}"></span>
+           </td>
+       </tr>
+       </tbody>
+   </table>
 
 </body>
 </html>
