3주차 두번째 과제

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -7,6 +7,15 @@
 <body>
    <a th:href="@{/post}">글쓰기</a>
 
+   <!--검색form-->
+   <form action="/board/search" method="GET">
+       <div>
+           <input name="keyword"type="text" placeholder="검색어를 입력해주세요">
+       </div>>
+
+       <button>검색하기</button>
+   </form>>
+
    <table>
        <thead>
        <tr>
